# ece_559_week_7_proj

./: pyproject.toml
jobs/: main.py
src/ece_559_week_7_proj/: __init__.py  virtual_power_plant.py
